# Page-Analyzer

./: .env  .gitignore  Makefile  README.md  database.sql  example.env  pyproject.toml
.github/workflows/: lint.yml
page_analyzer/: app.py  create_db.py  database.py  pyproject.toml  validate.py
page_analyzer/env/: example.env
page_analyzer/templates/: detail.html  index.html  urls.html
