[project]
name = "page-analyzer"
version = "0.1.0"
description = "Flask-based web application for analyzing web pages, checking availability and extracting SEO data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "configobj>=5.0.9",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ruff>=0.14.14",
]

[tool.uv.workspace]
members = [
    "page_analyzer",
]
